src/test/resources/Parser/SyntaxErrors/IncompatibleTypesIf.front
class A:
    test() {
        if (this){}
    }